# billy2020

./: .gitignore  Billy2Sfml.vcxproj  Billy2Sfml.vcxproj.filters  CMakeLists.txt  Game.cpp  Game.h  LoadMap.cpp  LoadMap.h  Map.cpp  Map.h  Player.cpp  Player.h  ResourceDispatcher.cpp  ResourceDispatcher.h  RessourceManager.cpp  RessourceManager.h  RessourceSilo.h  TilesMap.h  start.cpp
assets/images/: Untitled - 1.pyxel  billy1anim.png.gif.pyxel  billyanim - Good.png.pyxel  billyanim.png.back  billyanim.png.old  billyanim.png.pyxel
assets/maps/: tilemap.txt  tilemap.txt.old
include/: Animation.h  Game.h  LoadMap.h  Player.h  ResourceDispatcher.h  ResourceManager.h  RessourceManager.h  TilesMap.h
src/: Animation.cpp  Game.cpp  Player.cpp  ResourceDispatcher.cpp  ResourceManager.cpp  ResourceSilo.cpp  RessourceManager.cpp  RessourceSilo.cpp  TilesMap.cpp  start.cpp
